feat: Archiver 핫플레이스 DTO에 주소 필드 추가 및 메서드 정리